<resources>
    <string name="app_name">Laza</string>

    <string name="nav_open">OPEN NAVIGATION DRAWER</string>
    <string name="nav_close">CLOSE NAVIGATION DRAWER</string>

    <string name="text_title_login">Bienvenido</string>
    <string name="text_subtitle_login">Ingresa tus datos para continuar</string>
    <string name="text_btn_login">Iniciar sesión</string>
    <string name="text_btn_checkout">Continuar compra</string>
    <string name="text_btn_add_to_cart">Agregar al carrito</string>
    <string name="text_label_username">Usuario</string>
    <string name="text_label_password">Contraseña</string>
    <string name="text_dont_you_have_account">¿Aún no tienes cuenta?</string>
    <string name="text_btn_go_to_register">Regístrate</string>
    <string name="text_hint_username">Ingresa tu nombre de usuario</string>
    <string name="text_hint_password">Ingresa tu contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_register">Regístrate</string>
    <string name="text_label_email">Email</string>
    <string name="text_hint_email">Ingresa tu correo electrónico</string>
    <string name="text_label_confirm_password">Confirma tu contraseña</string>
    <string name="text_hint_confirm_password">Confirma tu contraseña</string>
    <string name="text_have_already_an_account">¿Ya tienes una cuenta?</string>
    <string name="text_btn_go_to_login">Inicia sesión</string>
    <string name="text_error_password_restrictions">Ingresa una contraseña de al menos 6 dígitos</string>
    <string name="text_error_password_confirm">Las contraseñas no coinciden</string>
    <string name="text_error_email">Ingresa un email válido</string>
    <string name="text_error_usename">Ingresa un nombre de usuario válido</string>
    <string name="text_btn_register">Registrarse</string>
    <string name="text_subtitle_register">Crea una cuenta nueva</string>
    <string name="text_drawer_menu_categories">Categorías</string>
    <string name="text_drawer_menu_purchases">Mis compras</string>
    <string name="text_drawer_menu_logout">Cerrar sesión</string>
    <string name="text_btn_view_all">Ver todo</string>
    <string name="text_alert_on_exit_app">¿Deseas salir de la aplicación?</string>
    <string name="text_exit">Salir</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_hint_search">Buscar...</string>
    <string name="text_pdp_price">Precio</string>
    <string name="text_pdp_description">Descripción</string>
    <string name="text_pdp_reviews">Reseñas</string>
    <string name="text_review_score">Calificación</string>
    <string name="text_product_sign_price">$ </string>
    <string name="text_title_cart_fragment">Carrito de compras</string>
    <string name="text_empty_cart">Tu carrito está vacío</string>
    <string name="text_empty_favorites">Tu lista de favoritos está vacía</string>
    <string name="text_empty_cart_message">¡Agrega productos a tu carrito y consigue envío gratis!</string>
    <string name="text_empty_favorites_message">¡Aquí aparecerán tus productos favoritos para que puedas acceder a ellos más fácilmente!</string>
    <string name="text_cart_empty_explore_products">Explorar productos</string>
    <string name="text_favorite_empty_explore_products">Explorar productos</string>
    <string name="text_title_favorites_fragment">Mis favoritos</string>
</resources>