<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ui.login.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="72dp">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="128dp"
                android:text="@string/text_title_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp"
                android:layout_marginTop="64dp"
                android:text="@string/text_label_username"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etUsername"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp"
                android:hint="@string/text_hint_username"
                android:imeOptions="actionNext" />

            <TextView
                android:id="@+id/tvUsernameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp"
                android:text="@string/text_error_usename"
                style="@style/TextErrorStyle"
                tools:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp"
                android:layout_marginTop="@dimen/common_padding_32dp"
                android:text="@string/text_label_email"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp"
                android:hint="@string/text_hint_email"
                android:imeOptions="actionNext" />

            <TextView
                android:id="@+id/tvEmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp"
                android:text="@string/text_error_email"
                style="@style/TextErrorStyle"
                tools:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp"
                android:layout_marginTop="@dimen/common_padding_32dp"
                android:text="@string/text_label_password"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:paddingEnd="44dp" />

                <ImageButton
                    android:id="@+id/btnShowPassword"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_show_password" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp"
                android:text="@string/text_error_password_restrictions"
                style="@style/TextErrorStyle"
                tools:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp"
                android:layout_marginTop="@dimen/common_padding_32dp"
                android:text="@string/text_label_confirm_password"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp">

                <EditText
                    android:id="@+id/etConfirmPassword"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingEnd="44dp" />

                <ImageButton
                    android:id="@+id/btnShowPasswordConfirm"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_show_password" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvConfirmPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp"
                android:text="@string/text_error_password_confirm"
                style="@style/TextErrorStyle"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="83dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_have_already_an_account" />

                <TextView
                    android:id="@+id/btnGoToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/text_btn_go_to_login"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/secondaryColor"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground">

        <TextView
            style="@style/SubTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/common_padding_16dp"
            android:text="@string/text_btn_register" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>