<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ui.login.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="72dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="128dp"
                android:text="@string/text_title_login"
                style="@style/TitleText"/>

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_subtitle_login"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp"
                android:layout_marginTop="128dp"
                android:text="@string/text_label_username"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp"
                android:hint="@string/text_hint_username"
                android:imeOptions="actionNext"
                style="@style/EditTextStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp"
                android:layout_marginTop="@dimen/common_padding_32dp"
                android:text="@string/text_label_password"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_16dp">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingEnd="44dp"
                    android:hint="@string/text_hint_password"
                    style="@style/EditTextStyle"/>

                <ImageButton
                    android:id="@+id/btnShowPassword"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_show_password_true" />

            </FrameLayout>

            <!--                <TextView-->
            <!--                    android:id="@+id/tvPasswordError"-->
            <!--                    android:visibility="gone"-->
            <!--                    tools:visibility="visible"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginHorizontal="@dimen/common_padding_16dp"-->
            <!--                    android:layout_marginTop="2dp"-->
            <!--                    android:textColor="@color/errorColor"-->
            <!--                    android:text="Ingresa una contraseña de al menos 8 dígitos"-->
            <!--                    android:drawablePadding="4dp"-->
            <!--                    app:drawableStartCompat="@drawable/ic_exclamation" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="83dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_dont_you_have_account" />

                <TextView
                    android:id="@+id/btnGoToRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/text_btn_go_to_register"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/secondaryColor"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/common_padding_16dp"
            android:layout_gravity="center"
            android:text="@string/text_btn_login"
            style="@style/SubTitleText"/>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>