<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.favorites.favoriteslist.FavoritesListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptyFavoriteContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_laza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.250" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            android:gravity="center"
            android:text="@string/text_empty_favorites"
            style="@style/TitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="64dp"
            android:gravity="center"
            android:text="@string/text_empty_favorites_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <androidx.cardview.widget.CardView
            android:id="@+id/fabExploreProducts"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@id/textView6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/secondaryColor"
                android:gravity="center"
                android:importantForAccessibility="no"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/text_favorite_empty_explore_products"
                android:textColor="@color/white"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        tools:listitem="@layout/item_favorite_product"/>

</androidx.constraintlayout.widget.ConstraintLayout>